added 2 endpoints to openapi.yml, global exception handling, controller/service update
